Remover conferencistas sin foto

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
                                         </div>
                                     </div>
-                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="./assets/placeholder.jpg" loading="lazy" alt="Sarah Lee"
@@ -457,8 +457,8 @@
                                             </div>
 
                                         </div>
-                                    </div>
-                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    </div> -->
+                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="./assets/placeholder.jpg" loading="lazy"
@@ -488,8 +488,8 @@
                                             </div>
 
                                         </div>
-                                    </div>
-                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    </div> -->
+                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="./assets/placeholder.jpg" loading="lazy"
@@ -513,7 +513,7 @@
                                             </div>
 
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
