--- a/index.html
+++ b/index.html
@@ -1146,24 +1146,16 @@
                                 </div>
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
-                                    <a href="#" class="footer-social-link w-inline-block">
+                                    <a href="https://www.facebook.com/dentalidcuu/" class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="#" class="footer-social-link w-inline-block">
+                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la" class="footer-social-link w-inline-block" target="_blank"> 
                                         <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/linkedin.png" loading="lazy" alt="Linkedin Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                    <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/twitter.png" loading="lazy" alt="Twitter Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                    <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/youtube.png" loading="lazy" alt="Youtube Icon"
+                                    <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la" class="footer-social-link w-inline-block" target="_blank"> 
+                                        <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
                                     </a>
                                 </div>
