--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
 
 
         <header class="header navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid ps-5 pe-2">
-                <div class="logo d-flex justify-content-center justify-content-md-start">
+            <div class="container-fluid ps-5 pe-2 navegacionF">
+                <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                     <a href="#" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
                         <img src="" loading="lazy" alt="Logo" class="navbar-logo" />
                     </a>
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -136,6 +137,7 @@
                 </div>
             </div>
         </header>
+
 
         <script>
             document.addEventListener('DOMContentLoaded', function () {
@@ -361,9 +363,10 @@
                             <div class="margin-bottom margin-large mt-5">
                                 <div data-w-id="7790c7f5-e606-0e16-7ece-290f34840e41" class="max-width-large">
                                     <div class="margin-bottom margin-small">
-                                        <h2>Nuestros Conferencistas</h2>
+                                        <h2 class="text-center text-md-start">Nuestros Conferencistas</h2>
                                     </div>
-                                    <p class="text-size-medium">Descubre la excelencia en conocimiento y experiencia que
+                                    <p class="text-size-medium text-center">Descubre la excelencia en conocimiento y
+                                        experiencia que
                                         nuestros conferencistas tienen para ofrecer.
                                     </p>
                                 </div>
@@ -596,7 +599,7 @@
                                     </div>
                                 </div>
                                 <div class="agenda-list">
-                                    <h1>Día 1</h1>
+                                    <h1 class="text-center text-md-start">Día 1</h1>
                                     <div class="agenda-item">
                                         <div id="w-node-_93a4a87d-1a44-6bf5-82ef-dea48c791f86-3863c98b"
                                             class="agenda-time">
@@ -711,7 +714,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <h1>Día 2</h1>
+                                    <h1 class="text-center text-md-start">Día 2</h1>
                                     <div class="agenda-item">
                                         <div id="w-node-_93a4a87d-1a44-6bf5-82ef-dea48c791f86-3863c98b"
                                             class="agenda-time">
@@ -826,7 +829,7 @@
                                 <div id="w-node-b38ebd88-2d3c-574e-8f8f-d4a284f58d07-3863c98b"
                                     data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d07" class="location-content-wrapper">
                                     <div class="margin-bottom margin-small">
-                                        <h3 class="text-start">CENTRO DE EXPOSICIONES
+                                        <h3 class="text-center text-md-start">CENTRO DE EXPOSICIONES
                                             Y CONVENCIONES</h3>
                                     </div>
 
@@ -1146,15 +1149,18 @@
                                 </div>
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
-                                    <a href="https://www.facebook.com/dentalidcuu/" class="footer-social-link w-inline-block" target="_blank">
+                                    <a href="https://www.facebook.com/dentalidcuu/"
+                                        class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la" class="footer-social-link w-inline-block" target="_blank"> 
+                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                                        class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la" class="footer-social-link w-inline-block" target="_blank"> 
+                                    <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
+                                        class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
                                     </a>
