--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                                             </div>
                                             <div class="margin-bottom margin-small my-5">
                                                 <h1 class="codec-titulo">CODEC</h1>
+
                                             </div>
                                             <div class="header-infos-wrapper justify-content-md-between mt-5">
                                                 <div class="header-infos-item">
@@ -192,7 +193,36 @@
                                                 </div>
 
                                             </div>
+
                                         </div>
+                                        <!-- cuenta regresiva INICIO -->
+                                        <div class="countdown-container mt-5 pt-5">
+                                            <div class="time-circle" id="days-circle">
+                                                <div class="inside-circle">
+                                                    <span id="days"></span>
+                                                    <div class="label">Días</div>
+                                                </div>
+                                            </div>
+                                            <div class="time-circle" id="hours-circle">
+                                                <div class="inside-circle">
+                                                    <span id="hours"></span>
+                                                    <div class="label">Horas</div>
+                                                </div>
+                                            </div>
+                                            <div class="time-circle" id="minutes-circle">
+                                                <div class="inside-circle">
+                                                    <span id="minutes"></span>
+                                                    <div class="label">Minutos</div>
+                                                </div>
+                                            </div>
+                                            <div class="time-circle" id="seconds-circle">
+                                                <div class="inside-circle">
+                                                    <span id="seconds"></span>
+                                                    <div class="label">Segundos</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- cuenta regresiva FIN -->
                                     </div>
                                 </div>
                             </div>
@@ -644,10 +674,16 @@
                                         </div>
                                         <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                             class="agenda-content">
+                                            <p>Conferencista: Dr. Heber Roberto León Salazar</p>
                                             <h3>Remodelación de la Estética Rosa, Cirugía Plástica
                                                 Periodontal</h3>
+                                            <p>
+                                                La unión de la estética rosa con la estética blanca es un factor
+                                                primordial para la conformación del segmento anterior. Aprende como se
+                                                complementan.
+                                            </p>
 
-                                            <p>Conferencista: Dr. Heber Roberto León Salazar</p>
+
                                         </div>
                                     </div>
                                     <div data-w-id="d17faf61-0b41-190f-fc7b-8c8bf949ca18" class="agenda-item">
@@ -673,6 +709,11 @@
                                                 <h3>Comunicándonos Para un Mejor Resultado</h3>
                                             </div>
                                             <p>Conferencista: Dr. Leonardo Vogel</p>
+                                            <p>
+                                                La comunicación con tu laboratorio es la base de las restauraciones
+                                                biomimeticas, aprender a transmitir la mayor información a tu
+                                                laboratorio te dará el éxito en tu consulta diaria.
+                                            </p>
                                         </div>
                                     </div>
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
@@ -698,6 +739,9 @@
                                                 <h3>Restauraciones Bio-miméticas en el Segmento
                                                     Anterior</h3>
                                             </div>
+                                            <p>Hoy en día las exigencias estéticas del paciente presentan estándares
+                                                altos, te ayudara a comprender como emular lo natural y aumentar la
+                                                belleza en tus restauraciones de segmento anterior.</p>
                                             <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                         </div>
                                     </div>
@@ -712,6 +756,9 @@
                                             <div class="margin-bottom margin-xsmall">
                                                 <h3>Fiesta Rompe Hielos</h3>
                                             </div>
+                                            <p class="fw-bold">Fiesta Rompe Hielos no esta incluido en el boleto y no se
+                                                proporcionara
+                                                comida</p>
                                         </div>
                                     </div>
                                     <h1 class="text-center text-md-start">Día 2</h1>
@@ -750,7 +797,11 @@
                                             <div class="margin-bottom margin-xsmall">
                                                 <h3>Neuro Marketing Dental</h3>
                                             </div>
+                                            <p>Los valores agregados en tu consulta aumentan la fidelidad de tus
+                                                pacientes y mejoran tus ingresos, aprende del major acerca de estos
+                                                temas.</p>
                                             <p>Conferencista: Dr. Cristian Reyna</p>
+
                                         </div>
                                     </div>
                                     <div data-w-id="d17faf61-0b41-190f-fc7b-8c8bf949ca18" class="agenda-item">
@@ -772,8 +823,11 @@
                                         </div>
                                         <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                             class="agenda-content">
-                                            <h3>Remodelación de la Estética rosa, cirugía plástica
-                                                periodontal</h3>
+                                            <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
+                                            <p>Conocerás las herramientas necesarias del flujo digital y la integración
+                                                del mismo en la odontología del día a día, ayudándote a seleccionar
+                                                aquellas herramientas que te serán de mejor provecho y con una baja
+                                                inversión.</p>
                                             <p>Conferencista: Dr. Oscar Vizcarra</p>
                                         </div>
                                     </div>
@@ -799,6 +853,9 @@
                                             class="agenda-content">
                                             <h3>Transición de Flujo Analógico a Flujo Digital.
                                                 Curva de Aprendizaje</h3>
+                                            <p>Aprenderás como las herramientas digitales han enriquecido los protocolos
+                                                analógicos y como puedes hacer uso de los procesos CAD/CAM para mejorar
+                                                tu consulta diaria.</p>
                                             <p>Conferencista: Dr. Nestor Schejtman</p>
                                         </div>
                                     </div>
@@ -909,8 +966,7 @@
                             <div data-w-id="c82bcae3-9bd7-50c4-334e-bfa59cde03af" class="margin-bottom margin-large">
                                 <div class="text-align-center">
                                     <div class="max-width-large align-center">
-                                        <h3 class="">Gracias a nuestros patrocinadores quienes han hecho
-                                            esto posible:</h3>
+                                        <h3 class="">Area Comercial</h3>
                                     </div>
                                 </div>
                             </div>
@@ -1184,6 +1240,7 @@
     </div>
     </div>
     <script src="scripts/checkout.js"></script>
+    <script src="scripts/simplyCountdown.js"></script>
     <script src="scripts/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
