--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
 
                                         </div>
                                     </div> -->
-                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/placeholder.jpg" loading="lazy"
+                                                <img src="./assets/dr-calixto.jpg" loading="lazy"
                                                     alt="Dr. Floriberto Calixto Arellanos"
                                                     class="speaker-image img-fluid" />
                                             </div>
@@ -502,18 +502,15 @@
                                                 <div class="heading-style-h4">Dr. Floriberto Calixto Arellanos</div>
                                                 <div class="text-size-medium">Titulo</div>
                                                 <div class="speaker-bio-content">
-                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
-                                                        cirujano dentista especializado en prostodoncia, graduado de la
-                                                        UNAM
-                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
-                                                        Universidad de Rochester. Desde 2002, mantiene una
-                                                        práctica privada en prostodoncia y es miembro activo de la
-                                                        Asociación Dental Mexicana, el American Prosthodontist Society
-                                                        (Vicepresidente), y el International College of Dentist.
-                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
-                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
-                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
-                                                        conferencista a nivel nacional e internacional.</p>
+                                                    <p class="text-bio">Dr. Floriberto Calixto Arellano es un
+                                                        estomatólogo especializado en operatoria dental, prostodoncia e
+                                                        implantología. Graduado de la BUAP con una licenciatura y
+                                                        maestría en ciencias en estomatología integral, ha realizado
+                                                        diplomados y certificaciones internacionales en periodoncia,
+                                                        implantología, y adhesivos dentales. Desde 2003, combina su
+                                                        práctica privada con su rol como profesor investigador en la
+                                                        Facultad de Estomatología de la BUAP. También ha sido asesor
+                                                        científico externo para Ivoclar Vivadent y Kuraray - MDC.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -521,7 +518,7 @@
                                             </div>
 
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
@@ -586,6 +583,35 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Leonardo Favio Rogel</div>
+                                                <div class="text-size-medium">Técnico Dental</div>
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Leonardo Favio Rogel Rogel es un técnico dental
+                                                        con más de 23 años de experiencia, radicado en Toluca, México.
+                                                        Fundó su laboratorio dental en 2001, especializado en
+                                                        rehabilitación estética, libre de metal, fija y sobre implantes.
+                                                        Ha impartido diversos cursos sobre maquillaje dental, emax
+                                                        press, y estratificación, destacándose en el uso de productos de
+                                                        Ivoclar. Leonardo ha asistido a seminarios anuales de Ivoclar
+                                                        Vivadent desde 2004 y cuenta con un equipo de trabajo de 9
+                                                        integrantes. Es reconocido por su habilidad en distintas
+                                                        técnicas de laboratorio y fotografía clínica.</p>
+                                                </div>
+                                                <div class="redes-c">
+
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                        <div class="speaker-item">
+                                            <div class="speaker-image-wrapper">
+                                                <img src="assets/dr-reyna.jpg" loading="lazy" alt="Dr. Cristian Reyna"
+                                                    class="speaker-image img-fluid" />
+                                            </div>
+                                            <div class="speaker-content-wrapper">
+                                                <div class="heading-style-h4">Dr. Cristian Reyna</div>
                                                 <div class="text-size-medium">Técnico Dental</div>
                                                 <div class="speaker-bio-content">
                                                     <p class="text-bio">Leonardo Favio Rogel Rogel es un técnico dental
