--- a/index.html
+++ b/index.html
@@ -608,7 +608,11 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="assets/dr-reyna.jpg" loading="lazy" alt="Dr. Cristian Reyna"
-                                                    class="speaker-image img-fluid" />
+                                                    style="
+                                                object-fit: cover;
+                                                min-height: 495px;
+                                                " class="speaker-image img-fluid img-drReyna" />
+
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Cristian Reyna</div>
@@ -782,7 +786,7 @@
                                             <div class="margin-bottom margin-xsmall">
                                                 <h3>Fiesta Rompe Hielos</h3>
                                             </div>
-                                            <p class="fw-bold">Fiesta Rompe Hielos no esta incluido en el boleto y no se
+                                            <p class="">Fiesta Rompe Hielos no esta incluido en el boleto y no se
                                                 proporcionara
                                                 comida</p>
                                         </div>
