--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container-fluid ps-5 pe-2 navegacionF">
                 <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                     <a href="#" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                        <img src="" loading="lazy" alt="Logo" class="navbar-logo" />
+                        <img src="./assets/zeyco_logo.png" loading="lazy" alt="Logo" class="navbar-logo" />
                     </a>
                 </div>
                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
@@ -978,7 +978,7 @@
 
                             <div class="organizadores">
                                 <div class="organizadoresImg">
-                                    <img src="assets/logos.png" alt="logo">
+                                    <img src="assets/zeyco_logo.png" alt="logo">
                                 </div>
 
                             </div>
@@ -1220,7 +1220,7 @@
                             <div class="footer-top-wrapper">
                                 <div class="logo-footer">
                                     <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                        <img src="" loading="lazy" alt="Logo" class="navbar-logo" />
+                                        <img src="./assets/zeyco_logo.png" loading="lazy" alt="Logo" class="navbar-logo" />
                                     </a>
                                 </div>
 
