--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container-fluid ps-5 pe-2 navegacionF">
                 <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                     <a href="#" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                        <img src="./assets/zeyco_logo.png" loading="lazy" alt="Logo" class="navbar-logo" />
+                        <img src="./assets/¿.png" loading="lazy" alt="Logo" class="navbar-logo" />
                     </a>
                 </div>
                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
@@ -178,7 +178,7 @@
                                             </div>
                                             <div class="margin-bottom margin-small my-5">
                                                 <h1 class="codec-titulo">CODEC</h1>
-
+                                                <h3 class="frase-codec"">Sunt ea sint esse Lorem eu ut commodo ad.</h3>
                                             </div>
                                             <div class="header-infos-wrapper justify-content-md-between mt-5">
                                                 <div class="header-infos-item">
@@ -270,7 +270,7 @@
 
                                 <div class="d-grid align-items-center justify-content-center">
 
-                                    <img class="img-fluid" src="assets/imagen-conferencia.jpg" alt="img evento">
+                                    <img class="img-fluid" src="assets/dentistas_photo.jpg" alt="img evento">
 
                                 </div>
 
@@ -978,7 +978,7 @@
 
                             <div class="organizadores">
                                 <div class="organizadoresImg">
-                                    <img src="assets/zeyco_logo.png" alt="logo">
+                                    <img src="assets/logos-removebg-preview.png" alt="logo">
                                 </div>
 
                             </div>
@@ -996,7 +996,7 @@
                             <div data-w-id="c82bcae3-9bd7-50c4-334e-bfa59cde03af" class="margin-bottom margin-large">
                                 <div class="text-align-center">
                                     <div class="max-width-large align-center">
-                                        <h3 class="">Area Comercial</h3>
+                                        <h3 class="">Área Comercial</h3>
                                     </div>
                                 </div>
                             </div>
@@ -1220,7 +1220,7 @@
                             <div class="footer-top-wrapper">
                                 <div class="logo-footer">
                                     <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                        <img src="./assets/zeyco_logo.png" loading="lazy" alt="Logo" class="navbar-logo" />
+                                        <img src="./assets/.png" loading="lazy" alt="Logo" class="navbar-logo" />
                                     </a>
                                 </div>
 
@@ -1254,6 +1254,9 @@
                             </div>
                         </div>
                         <div class="footer-bottom-wrapper">
+                            <div class="disclaimer">
+                                Gracias por visitar nuestra página web y por su interés en nuestros eventos. Nos gustaría informarle que todas las compras de boletos son finales. Una vez que se ha completado la compra, no podemos ofrecer reembolsos, cambios ni cancelaciones bajo ninguna circunstancia, lo cual incluye cambios de planes personales, conflictos de horario, problemas de transporte y condiciones meteorológicas.
+                            </div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                                 los derechos reservados</div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
